derive-ex-tests/tests/compile_fail/common/invalid_trait.rs
use derive_ex::derive_ex;

#[derive_ex(Unknown)]
struct X;

fn main() {}
