derive-ex-tests/tests/compile_fail/common/invalid_trait.stderr
error: unsupported trait
 --> tests/compile_fail/common/invalid_trait.rs:3:13
  |
3 | #[derive_ex(Unknown)]
  |             ^^^^^^^
